# musync

./: .cache  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
src/: __main__.py  f_m3u8.py  f_spoti.py  f_ytmusic.py
